--- a/_includes/brand-page.html
+++ b/_includes/brand-page.html
@@ -557,34 +557,9 @@
   <div className="section" ref="{mesheryOperatorRef}">
     {% include meshery-operatorbrand.html %}
   </div>
-  <div className="section" ref="{imageHubRef}">
-    <ImageHubBrand />
+
+  <div className="section" ref="{mesheryOperatorRef}">
+    {% include cloud-nativepatterns.html %}
   </div>
-  <div className="section" ref="{smpRef}">
-    <SMPBrand />
-  </div>
-  <div className="section" ref="{meshmarkRef}">
-    <MeshMarkBrand />
-  </div>
-  <div className="section" ref="{servicemeshpatternsRef}">
-    <ServiceMeshPatterns />
-  </div>
-  <div className="section" ref="{nightHawkRef}">
-    <NightHawk />
-  </div>
-  <div className="section" ref="{meshmateRef}">
-    <CommunityBrand />
-  </div>
-  <div className="section" ref="{meshMasterRef}">
-    <MeshMasterBrand />
-  </div>
-  <div className="section" ref="{meshmapRef}">
-    <MeshMapBrand />
-  </div>
-  <div className="section" ref="{CatalogRef}">
-    <Catalog />
-  </div>
-  <div className="section" ref="{stickfiguresRef}">
-    <StickFigures />
-  </div>
+ 
 </section>
