--- a/_includes/meshery-brand.html
+++ b/_includes/meshery-brand.html
@@ -34,6 +34,19 @@
     padding: 1.5rem 2.5rem;
   }
 
+  .btn-down {
+
+background-color: #EBC017;
+width: 219.2px;
+height: 49px;
+padding: 14px;
+border-radius: 7px;
+display: flex;
+align-items: center;
+
+    justify-content: center;
+}
+
   .p1 {
     background-color: #00D3A9;
 
@@ -61,14 +74,14 @@
 
 <div className="post-content">
   <div class="row">
-    <h1 class="layerH3">
-      Meshery
+    <h1 class="layerH3" style="font-weight: 1000;">
+     Meshery
     </h1>
     <Col xs={12} sm={6} className="download-button">
     <a href="/brand/meshery-brand-kit.zip">
-      <Button primary title="Download Logo Assets" external={true}>
-        <FiDownloadCloud size={21} className="icon-left" />
-      </Button>
+      <button primary class="btn-down" "Download Logo Assets" external={true}>
+        Download Logo Assets <FiDownloadCloud size={21} className="icon-left" />
+      </button>
     </a>
     </Col>
     <Col>
@@ -84,7 +97,7 @@
     </Row>
 
     <div>
-      <h2 style="display: flex">
+      <h2 style="display: flex" class="layerH3 in">
         Logos
       </h2>
 
@@ -105,7 +118,7 @@
 
     </div>
     <div class="row">
-      <h2 className="layerH3 in">
+      <h2 class="layerH3 in">
         Colors
       </h2>
       <Col>
