--- a/_includes/cloud-nativepatterns.html
+++ b/_includes/cloud-nativepatterns.html
@@ -66,7 +66,7 @@
         </h2>
         <Col xs={12} sm={6} className="download-button">
         <a href="/brand/meshery-operator-brand-kit.zip">
-            <button primary class="btn" external={true}>
+            <button primary class="btn-down" external={true}>
                 Download Logo Assets <FiDownloadCloud size={21} className="icon-left" />
             </button>
         </a>
