Worked on alignment

--- a/_includes/meshery-brand.html
+++ b/_includes/meshery-brand.html
@@ -8,6 +8,26 @@
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
 <style>
+
+  .layerH3 {
+
+    text-align: start;
+		margin-bottom: 1em;
+  }
+
+  .in {
+
+    margin-top: 2rem;
+  }
+
+  .ImgDiv {
+		width: 100%;
+		margin: auto;
+    display: flex;
+		justify-content: space-around;
+    margin-top: 3rem;
+	}
+
   .row {
     display: flex;
     justify-content: space-between;
@@ -73,7 +93,7 @@ align-items: center;
 
 
 <div className="post-content">
-  <div class="row">
+  <div class="row sub-project brand-section">
     <h1 class="layerH3" style="font-weight: 1000;">
      Meshery
     </h1>
@@ -101,20 +121,25 @@ align-items: center;
         Logos
       </h2>
 
-      <div class="row">
-
-        <img src="../assets/images/meshery-dark-text.webp" alt="MesheryDark Logo" height="200" width="300" />
-        <img src="../assets/images/meshery-logo-light-text.webp" alt="MesheryLightTextSide Logo" height="200"
-          width="300" />
-
+      <div class="ImgDiv">
+        <div class="" style="display: flex;">
+          <img src="../assets/images/meshery-dark-text.webp" alt="MesheryOperatorDark Logo" height="270" width="270"/>
+        </div>
+        <div class="" style="display: flex;">
+          <img src="../assets/images/meshery-logo-light-text.webp" alt="MesheryOperator Logo" height="270" width="270"/>
+        </div>
       </div>
-      <div class="row">
 
-        <img src="../assets/images/meshery-logo-light-text.webp" alt="MesheryLightText Logo" height="200" width="300" />
 
-        <img src="../assets/images/meshery-logo-dark.webp" alt="Meshery Logo" height="200" width="300" />
-
+      <div class="ImgDiv">
+        <div class="" style="display: flex;">
+          <img src="../assets/images/meshery-logo-light-text.webp" alt="MesheryOperatorDark Logo" height="270" width="270"/>
+        </div>
+        <div class="" style="display: flex;">
+          <img src="../assets/images/meshery-logo-dark.webp" alt="MesheryOperator Logo" height="270" width="270"/>
+        </div>
       </div>
+
 
     </div>
     <div class="row">
@@ -130,21 +155,21 @@ align-items: center;
       </Col>
       <div class="row">
 
-        <div class="PalletBox p1">
+        <div class="PalletBox p1" style="width: 11rem; height: 12rem;">
         </div>
-        <div class="PalletBox p2">
-        </div>
-
-        <div class="PalletBox p3">
+        <div class="PalletBox p2" style="width: 11rem; height: 12rem;">
         </div>
 
-        <div class="PalletBox p4">
+        <div class="PalletBox p3" style="width: 11rem; height: 12rem;">
         </div>
 
-        <div class="PalletBox p5">
+        <div class="PalletBox p4" style="width: 11rem; height: 12rem;">
         </div>
 
-        <div class="PalletBox p6">
+        <div class="PalletBox p5" style="width: 11rem; height: 12rem;">
+        </div>
+
+        <div class="PalletBox p6" style="width: 11rem; height: 12rem;">
         </div>
 
 
