--- a/_includes/brand-page.html
+++ b/_includes/brand-page.html
@@ -6,459 +6,33 @@
 />
 <style>
 
-
-
-.brandpagewrapper {
-    position: relative;
-    overflow: visible;
-    margin-bottom: 2rem;
-}
-
-.brandpagewrapper .brandHeader {
-    padding: 6rem 0;
-    background: ${props => props.theme.grey212121ToGreen1E2117};
-    text-align: center;
-    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-}
-
-.brandpagewrapper .brandHeader h1 {
-    color: ${props => props.theme.white};
-}
-
-.brandpagewrapper .brandHeader p {
-    margin: 1.5rem auto 4rem;
-    max-width: 60%;
-    color: ${props => props.theme.white};
-}
-
-.brandpagewrapper .bookmarks {
-    text-align: center;
-}
-
-.brandpagewrapper .bookmarks img {
-    width: 70%;
-}
-
-.brandpagewrapper .logo {
-    background: ${props => props.theme.blackToGreen3C494F};
-    padding: 0.95rem;
-    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-}
-
-.brandpagewrapper .brand-row {
-    margin: 0;
-}
-
-.brandpagewrapper .brand-nav-col {
-    padding: 4rem 7rem 6rem;
-}
-
-.brandpagewrapper .nav-fixed {
-    position: sticky;
-    top: 6rem;
-    z-index: 1;
-}
-
-.brandpagewrapper .header_link {
-    display: block;
-    margin: 0;
-    position: relative;
-    width: fit-content;
-    color: ${props => props.theme.whiteFourToBlackFour};
-    font: 500 1.2rem/2.5rem 'Qanelas Soft', sans-serif;
-    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-}
-
-.brandpagewrapper .header_link span::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    bottom: 0;
-    border-bottom: 1px solid ${props => props.theme.secondaryColor};
-    margin-bottom: -1px;
-    opacity: 0;
-}
-
-.brandpagewrapper .header_link:hover {
-    cursor: pointer;
-    color: ${props => props.theme.secondaryColor};
-}
-
-.brandpagewrapper .header_link:hover span::before {
-    opacity: 1;
-    animation: flowin 0.5s ease-in;
-}
-
-.brandpagewrapper .selected {
-    border-bottom: 1px solid ${props => props.theme.secondaryColor};
-    color: ${props => props.theme.secondaryColor};
-}
-
-.brandpagewrapper .post-content {
-    margin: 0rem 0rem 3rem 12rem;
-}
-
-.brandpagewrapper .brand-section {
-    padding-top: 7rem;
-}
-
-.brandpagewrapper .section + .section {
-    margin-top: -5rem;
-}
-
-@media screen and (max-width: 1800px) and (min-width: 1300px) {
-    .brandpagewrapper .post-content {
-        margin: 3rem 0rem 3rem 8rem;
-    }
-
-    .brandpagewrapper .brand-nav-col {
-        padding: 4rem 3rem 6rem;
-    }
-}
-
-@media screen and (max-width: 1299px) and (min-width: 1024px) {
-    .brandpagewrapper .post-content {
-        margin: 3rem 0rem 3rem 3rem;
-    }
-
-    .brandpagewrapper .brand-nav-col {
-        padding: 4rem 0.75rem 6rem;
-    }
-}
-
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-    .brandpagewrapper .post-content {
-        margin: 3rem 0rem 3rem 1.5rem;
-    }
-
-    .brandpagewrapper .brand-nav-col {
-        padding: 4rem 0.25rem 6rem;
-    }
-
-    .brandpagewrapper .header_link {
-        font-size: 0.9rem;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    .brandpagewrapper .brand-nav-col {
-        display: none;
-    }
-
-    .brandpagewrapper .post-content {
-        margin: 3rem auto 5rem;
-    }
-}
-
-.brandpagewrapper .download-button {
-    text-align: end;
-    margin: 0 0 1rem 0;
-}
-
-.brandpagewrapper .ImgDiv, .brandpagewrapper .color-code-wrapper {
-    width: 100%;
-    margin: auto;
-    justify-content: space-around;
-}
-
-.brandpagewrapper .Layer5Logos {
-    font-style: italic;
-    text-align: center;
-    margin: auto;
-}
-
-.brandpagewrapper .Layer5Logos img.Layer5Icon {
-    width: auto;
-    height: 50px;
-    display: block;
-    margin: auto;
-    margin-bottom: 1rem;
-}
-
-@media screen and (max-width: 575px) {
-    .brandpagewrapper .ImgDiv, .brandpagewrapper .color-code-wrapper {
-        margin-left: 0px;
-    }
-
-    .brandpagewrapper img.Layer5Icon {
-        width: auto;
-        height: 80px;
-        display: block;
-        margin: auto;
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-    }
-}
-
-.brandpagewrapper .layerH3 {
-    text-align: start;
-    margin-bottom: 1em;
-}
-
-.brandpagewrapper .in {
-    margin-top: 2rem;
-}
-
-.brandpagewrapper .blond-color-box, .brandpagewrapper .white-color-box {
-    .PalletBox {
-        color: rgb(30, 33, 23);
-    }
-}
-
-.brandpagewrapper .white-color-box .PalletBox {
-    border: 1px solid ${props => props.theme.tertiaryColor};
-    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-}
-
-@media screen and (max-width: 575px) {
-    .brandpagewrapper .download-button {
-        text-align: start;
-    }
-}
-  .brandHeader {
-    padding: 6rem 0;
-    text-align: center;
-    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-  }
-
-  .brandHeader h1 {
-  }
-
-  .brandHeader p {
-    margin: 1.5rem auto 4rem;
-    max-width: 60%;
-  }
-
-  .bookmarks {
-    text-align: center;
-  }
-
-  .bookmarks img {
-    width: 70%;
-  }
-
-  .logo {
-    background: ${props => props.theme.blackToGreen3C494F};
-    padding: 0.95rem;
-    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-  }
-
-  .brand-row {
-    margin: 0;
-  }
-
-  .brand-nav-col {
-    padding: 4rem 7rem 6rem;
-  }
-
   .nav-fixed {
-    position: sticky;
-    top: 6rem;
-    z-index: 1;
-  }
+		position: sticky;
+		top: 6rem;
+		z-index: 1;
+	}
 
   .header_link {
-    display: block;
-    margin: 0;
-    position: relative;
-    width: fit-content;
-    color: ${props => props.theme.whiteFourToBlackFour};
-    font: 500 1.2rem/2.5rem 'Qanelas Soft', sans-serif;
-    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-  }
+		display: block;
+		margin: 0;
+		position: relative;
+		width: fit-content;
+		font: 500 1.2rem/2.5rem 'Qanelas Soft', sans-serif;
+		transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
 
-  .header_link span::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    bottom: 0;
-    border-bottom: 1px solid ${props => props.theme.secondaryColor};
-    margin-bottom: -1px;
-    opacity: 0;
-  }
+		span::before {
+			content: '';
+			position: absolute;
+			width: 100%;
+			height: 1px;
+			bottom: 0;
+			margin-bottom: -1px;
+			opacity: 0;
+		}
 
-  .header_link:hover {
-    cursor: pointer;
-    color: ${props => props.theme.secondaryColor};
-  }
-
-  .header_link:hover span::before {
-    opacity: 1;
-    animation: flowin 0.5s ease-in;
-  }
-
-  .selected {
-    border-bottom: 1px solid ${props => props.theme.secondaryColor};
-    color: ${props => props.theme.secondaryColor};
-  }
-
-  .post-content {
-    margin: 0rem 0rem 3rem 12rem;
-  }
-
-  .brand-section {
-    padding-top: 7rem;
-  }
-
-  .section + .section {
-    margin-top: -5rem;
-  }
-
-  @media screen and (max-width: 1800px) and (min-width: 1300px) {
-    .post-content {
-      margin: 3rem 0rem 3rem 8rem;
-    }
-
-    .brand-nav-col {
-      padding: 4rem 3rem 6rem;
-    }
-  }
-
-  @media screen and (max-width: 1299px) and (min-width: 1024px) {
-    .post-content {
-      margin: 3rem 0rem 3rem 3rem;
-    }
-
-    .brand-nav-col {
-      padding: 4rem 0.75rem 6rem;
-    }
-  }
-
-  @media screen and (max-width: 1023px) and (min-width: 768px) {
-    .post-content {
-      margin: 3rem 0rem 3rem 1.5rem;
-    }
-
-    .brand-nav-col {
-      padding: 4rem 0.25rem 6rem;
-    }
-
-    .header_link {
-      font-size: 0.9rem;
-    }
-  }
-
-  @media screen and (max-width: 767px) {
-    .brand-nav-col {
-      display: none;
-    }
-
-    .post-content {
-      margin: 3rem auto 5rem;
-    }
-  }
-
-  .download-button {
-    text-align: end;
-    margin: 0 0 1rem 0;
-  }
-
-  .ImgDiv,
-  .color-code-wrapper {
-    width: 100%;
-    margin: auto;
-    justify-content: space-around;
-  }
-
-  .Layer5Logos {
-    font-style: italic;
-    text-align: center;
-    margin: auto;
-  }
-
-  .Layer5Logos img.Layer5Icon {
-    width: auto;
-    height: 50px;
-    display: block;
-    margin: auto;
-    margin-bottom: 1rem;
-  }
-
-  @media screen and (max-width: 575px) {
-    .ImgDiv,
-    .color-code-wrapper {
-      margin-left: 0px;
-    }
-
-    .Layer5Logos img.Layer5Icon {
-      width: auto;
-      height: 80px;
-      display: block;
-      margin: auto;
-      margin-bottom: 1rem;
-      margin-top: 1rem;
-    }
-  }
-
-  .layerH3 {
-    text-align: start;
-    margin-bottom: 1em;
-  }
-
-  .in {
-    margin-top: 2rem;
-  }
-
-  .blond-color-box,
-  .white-color-box .PalletBox {
-    color: rgb(30, 33, 23);
-  }
-
-  .white-color-box .PalletBox {
-    border: 1px solid ${props => props.theme.tertiaryColor};
-    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-  }
-
-  @media screen and (max-width: 575px) {
-    .download-button {
-      text-align: start;
-    }
-  }
-
-  .btnstyle {
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-family: inherit;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: capitalize;
-    border: 0;
-    min-width: 170px;
-    padding: 14px;
-    border-radius: 5px;
-    -webkit-transition: 450ms all;
-    transition: 450ms all;
-    background-color: #EBC017;
-    z-index: 999;
-  }
-
-  .btnstyle:hover,
-  .btnstyle:focus {
-    color: white;
-    background: ${props => props.theme.activeColor};
-    box-shadow: 0 2px 10px ${props => props.theme.whiteFourToBlackFour};
-  }
-
-  .btnstyle:active {
-    box-shadow: 0 2px 10px ${props => props.theme.blackFourToWhiteFour};
-    transform: scale(0.98);
-  }
-
-  .btnstyle .icon-left {
-    margin-right: 8px;
-  }
-
-  .btnstyle .icon-right {
-    margin-left: 8px;
   }
 
 
-
-  
 </style>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
@@ -544,22 +118,32 @@
   }
 </style>
 
-<section class="brandpagewrapper">
-  
+<section style="display: flex;">
 
-  <div className="section" ref="{mesheryRef}">
-    {% include meshery-brand.html %}
+  <div style="display:flex;">
+    <div id="meshery" class="" ref="{mesheryRef}">
+      {% include meshery-brand.html %}
+    </div>
+
+    <div id="meshsync" class="" ref="{meshsyncRef}">
+      {% include meshery-syncbrand.html %}
+    </div>
+    
+    <div id="meshery-operator" class="" ref="{mesheryOperatorRef}">
+      {% include meshery-operatorbrand.html %}
+    </div>
+
+    <div id="cloud-native" class="" ref="{mesheryOperatorRef}">
+      {% include cloud-nativepatterns.html %}
+    </div>
   </div>
 
-  <div className="section" ref="{meshsyncRef}">
-    {% include meshery-syncbrand.html %}
+  <div class="nav-fixed" style="justify-content: left; width: 200%; margin-left: 0.5rem;">
+    <ul>
+      <li><a href="#meshery" class="header_link">Meshery</a></li>
+      <li><a href="#meshsync" class="header_link">MeshSync</a></li>
+      <li><a href="#meshery-operator" class="header_link">Meshery Operator</a></li>
+      <li><a href="#cloud-native" class="header_link">Cloud Native Patterns</a></li>
+    </ul>
   </div>
-  <div className="section" ref="{mesheryOperatorRef}">
-    {% include meshery-operatorbrand.html %}
-  </div>
-
-  <div className="section" ref="{mesheryOperatorRef}">
-    {% include cloud-nativepatterns.html %}
-  </div>
- 
 </section>
