--- a/_includes/cloud-nativepatterns.html
+++ b/_includes/cloud-nativepatterns.html
@@ -26,6 +26,16 @@
 
     }
 
+    .logo {
+    background: rgb(0, 0, 0);
+    padding: 0.95rem;
+    transition: all 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) 0s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
     .PalletBox {
         height: 16rem;
         width: 16rem;
@@ -87,21 +97,18 @@
         </h3>
         </Col>
         <SRLWrapper>
-            <Row Vcenter className="ImgDiv">
-                <Col xs={12} sm={4}>
-                <img src="../assets/images/service-mesh-patterns.webp" alt="MesheryOperatorDark Logo" height="300"
-                    width="300" />
-                </Col>
-                <Col xs={12} sm={4} className="logo">
-                <img src="../assets/images/service-mesh-patterns-side-white.webp" alt="MesheryOperator Logo" height="200"
-                    width="450" />
-                </Col>
 
-                <Col xs={12} sm={4} className="logo">
-                    <img src="../assets/images/service-mesh-pattern-text_white.webp" alt="MesheryOperator Logo" height="300"
-                        width="300" />
-                    </Col>
-            </Row>
+            <div class="ImgDiv">
+                <div class="" style="display: flex; justify-content: space-around;">
+                  <img src="../assets/images/service-mesh-patterns.webp" alt="MesheryOperatorDark Logo" height="300" width="300"/>
+                </div>
+                <div class="logo" style="display: flex;">
+                  <img src="../assets/images/service-mesh-patterns-side-white.webp" alt="MesheryOperator Logo" height="100" width="250"/>
+                </div>
+                <div class="logo" style="display: flex;">
+                    <img src="../assets/images/service-mesh-pattern-text_white.webp" alt="MesheryOperator Logo" height="200" width="250"/>
+                  </div>
+              </div>
         </SRLWrapper>
     </Row>
     <Row>
@@ -120,15 +127,15 @@
         <Row className="color-code-wrapper">
             <div class="row">
 
-                <div class="PalletBox p1">
+                <div class="PalletBox p1" style="width: 11rem; height: 12rem;">
                 </div>
-                <div class="PalletBox p2">
-                </div>
-
-                <div class="PalletBox p3">
+                <div class="PalletBox p2" style="width: 11rem; height: 12rem;">
                 </div>
 
-                <div class="PalletBox p4">
+                <div class="PalletBox p3" style="width: 11rem; height: 12rem;">
+                </div>
+
+                <div class="PalletBox p4" style="width: 11rem; height: 12rem;">
                 </div>
 
             </div>
